[tool.poetry]
name = "repl-nix-zzz-nuker"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_zzz_nuker"}]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.9.4"
colorama = "^0.4.6"
packaging = "^24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
